--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <!-- dependencies -->
     <!-- START SOLUTION -->
     <script src="bower_components/underscore/underscore-min.js"></script>
+    <script src="bower_components/jquery/jquery.min.js"></script>
     <!-- END SOLUTION -->
     <!-- your scripts -->
     <script src="env/config.js"></script>
